[tool.poetry]
name = "chat_application"
version = "0.1.0"
description = "A python based messaging application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
passlib = "^1.7.4"
uvicorn = "^0.30.6"
websockets = "^12.0"
httpx = "^0.27.0"
asyncpg = "^0.29.0"
bcrypt = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
